fixed horizontal scrolling for long tweets to be fixed

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column; 
   width: 120%; 
+  max-width: 800px;
 }
 
 .new-tweet textarea {
@@ -48,6 +49,7 @@
 
 .tweets-container {
   width: 120%;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
 }
